packages/cashc/test/compiler/ParseError/for_loop_missing_update.cash
contract ForLoopMissingUpdate() {
    function spend() {
        for (int i = 0; i < 3; ) {
            require(i < 3);
        }
    }
}
